--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,11 +29,13 @@ services:
       - "80:80"
       - "8080:8080"
     restart: on-failure
+
   app:
     build: .
     network_mode: "service:gluetun" #If using VPN, Remove the Hash from first and fill up Above Details.
     command: bash start.sh
     restart: on-failure
-    ports:
-      - "80:80"
-      - "8080:8080"
+    # Remove the ports section
+    # ports:
+    #   - "80:80"
+    #   - "8080:8080"
